--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,7 @@
                     <h3 class="ui header">Description:</h3>
                     <p class="description-field">{{ todo.description | safe }}</p>
                 </div>
+                <p>Deadline: {{ todo.deadline.strftime('%Y-%m-%d %H:%M:%S') }}</p>
                 <p>Created At: {{ todo.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</p>
                 <p>Author: {{ todo.author }}</p>
                 <p>Assigned To: {{ todo.assigned_to }}</p>
