update cancel button

--- a/templates/update.html
+++ b/templates/update.html
@@ -30,6 +30,7 @@
                 </div>
             </div>
             <button class="ui blue button" type="submit">Update</button>
+            <a class="ui red button" href="{{ url_for('home') }}">Cancel</a>
         </form>
     </div>
 </body>
